syntax = "proto3";

package server.data.clientworld;

option csharp_namespace = "Server.Data.ClientWorld";

enum ClientWorldPacketId {
  CW_SERVER_STATE = 0;
  WC_SERVER_STATE = 1;
}


message CwServerState {

}

message WcServerState {

}